fix: disable hover effect on tablet

--- a/styles/scss/components/common/_header.scss
+++ b/styles/scss/components/common/_header.scss
@@ -63,6 +63,13 @@
 			}
 		}
 
+		@media screen and (min-width: (map-get($adaptive, tablet) + 1px)) {
+			&:hover::after {
+				transform: scaleX(1);
+				opacity: 1;
+			}
+		}
+
 		@media screen and (max-width: map-get($adaptive, tablet)) {
 			display: none;
 		}
@@ -100,9 +107,11 @@
 			content: "";
 		}
 
-		&:hover::after {
-			transform: scaleX(1);
-			opacity: 1;
+		@media screen and (min-width: (map-get($adaptive, tablet) + 1px)) {
+			&:hover::after {
+				transform: scaleX(1);
+				opacity: 1;
+			}
 		}
 	}
 
